2005/02/26	kaffeetisch

	* t/GtkAccelGroup.t, t/GtkAccelMap.t, t/GtkStock.t: Mark tests as
	TODO that currently fail due to what appears to be a bug in
	Test::More.

	* t/PangoLayout.t: Test pango_layout_[sg]et_attributes.

2005/02/19 20:13 (+0100) pcg

	* xs/GdkProperty.xs: document data instead of length as result value.
	* xs/GtkNotebook.xs: insert functions return gint from 2.4 onwards.

2005/02/18 15:53 (+0100) kaffeetisch

	* xs/GtkMessageDialog.xs, xs/GtkObject.xs, xs/GtkWidget.xs: Don't
	include ppport.h, it's not necessary.

2005/02/16 23:30 (-0400) muppetman

	* pm/SimpleList.pm: Catch undef iters gotten from requests for
	non-existent entries.

	* gtk2perl.h, xs/GtkPlug.xs, xs/GtkSocket.xs: invert the sense of
	the tests around GtkPlug and GtkSocket; only include them on X11,
	since that's the only platform on which they are supported.

2005/02/10 22:30 (+0100) kaffeetisch

	* t/GtkBox.t, t/GtkNotebook.t: Use TRUE and FALSE instead of 1 and
	0 or undef where appropriate.

2005/02/08 01:15 (-0400) muppetman

	* Gtk2.pm, NEWS, README, copyright.pod: unstable release 1.073

	* Makefile.PL: require Glib 1.073

	* MANIFEST: updated

2005/02/08 01:05 (-0400) muppetman

	* t/GtkComboBox.t: Fix gtk+ assertions by setting the combobox up
	properly.

2005/02/08 00:15 (-0400) muppetman

	* xs/GdkPixbuf.xs, t/GdkPixbuf.t: bind and test gdk_pixbuf_get_option

	* t/GtkAboutDialog.t, xs/GtkAboutDialog.xs: implement and test
	gtk_show_about_dialog

	* xs/GtkCellRenderer.xs, t/GtkCellRenderer.t: bind and test
	gtk_cell_renderer_stop_editing

	* xs/GtkIconView.xs, t/GtkIconView.t: bind and test
	gtk_icon_view_selected_foreach

2005/02/08 00:10 (-0400) muppetman

	* t/GtkComboBox.t: fix skip count.

2005/02/08 00:05 (-0400) muppetman

	M MANIFEST
	M xs_files-2.0
	A t/PangoAttributes.t
	A xs/PangoAttributes.xs: Bind and test pango_parse_markup().

2005/01/29 21:10 (-0400) muppetman

	* xs/GtkIconView.xs: remove out-of-date commentary
